2008-12-03  David Levin  <levin@chromium.org>

Reviewed by Alexey Proskuryakov.

        Remove uses of document() in XMLHttpRequest where simple.
        https://bugs.webkit.org/show_bug.cgi?id=22619

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::responseXML):
        Return NULL in the worker case which is according to spec (and avoids using document()).

        (WebCore::XMLHttpRequest::callReadyStateChangeListener):
        (WebCore::XMLHttpRequest::initSend):
        Use scriptExecutionContext() instead of document().



Canonical link: https://commits.webkit.org/31194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38987 268f45cc-cd09-0410-ab3c-d52691b4dbfc