WebCore/xml/XMLHttpRequest.cpp
@@ -365,7 +365,7 @@ Document* XMLHttpRequest::responseXML() const
         return 0;
 
     if (!m_createdDocument) {
-        if (m_response.isHTTP() && !responseIsXML()) {
+        if ((m_response.isHTTP() && !responseIsXML()) || scriptExecutionContext()->isWorkerContext()) {
             // The W3C spec requires this.
             m_responseXML = 0;
         } else {
@@ -453,7 +453,7 @@ void XMLHttpRequest::changeState(State newState)
 
 void XMLHttpRequest::callReadyStateChangeListener()
 {
-    if (!document() || !document()->frame())
+    if (!scriptExecutionContext())
         return;
 
     dispatchReadyStateChangeEvent();
@@ -531,7 +531,7 @@ void XMLHttpRequest::open(const String& method, const KURL& url, bool async, con
 
 bool XMLHttpRequest::initSend(ExceptionCode& ec)
 {
-    if (!document())
+    if (!scriptExecutionContext())
         return false;
 
     if (m_state != OPENED || m_loader) {
